fix(ui) Fix z-index stacking of modals and assistant cues (#13544)
Assistant cues should stack *under* modal windows as modal windows
should be focusing the user on the current task. Having an assistant
overlay on top only distracts and confuses people.

--- a/src/sentry/static/sentry/less/variables.less
+++ b/src/sentry/static/sentry/less/variables.less
@@ -67,6 +67,5 @@
 
 // Z-Index
 @zindex-dropdown-backdrop: 990;
-@zindex-modal-background: 1040;
 @zindex-sidebar-panel: 100;
 @zindex-sticky-bar: 1000;
